1. add folder app-dev-xmlrpc (API Odoo 16 type : xmlrpc)     1.1 create base_xmlrpc.py     1.2 create main_xmlrpc.py     1.3 function test api crud std 2. add folder app-dev-jsonrpc (API Odoo 16 type : jsonrpc) ** default not build class crud

--- a/docker-compose.build.yml
+++ b/docker-compose.build.yml
@@ -5,3 +5,8 @@ services:
         context: .
         dockerfile: ./Dockerfile
     image: fastapi_std/majin:${SERVER_VERSION}
+  dev:
+    build:
+        context: .
+        dockerfile: ./Dockerfile_NOT_CMD
+    image: fastapi_std/majin:dev
