Add version 0.0.1 [project : odoo external api and base_xmlrpc crud and logger for fastapi and .config.env file]

--- a/docker-compose.build.yml
+++ b/docker-compose.build.yml
@@ -4,9 +4,9 @@ services:
     build:
         context: .
         dockerfile: ./Dockerfile
-    image: fastapi_std/majin:${SERVER_VERSION}
+    image: fastapi/mp:${LIVE_VERSION}
   dev:
     build:
         context: .
-        dockerfile: ./Dockerfile_NOT_CMD
-    image: fastapi_std/majin:dev
+        dockerfile: ./Dockerfile
+    image: fastapi/mp:${DEV_VERSION}
